fix weird scroll on mobile

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -6,4 +6,5 @@
 
 body {
     font-family: 'Pathway Gothic One', sans-serif;
+    overflow: hidden;
 }
